--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 html{
     font-size: 2vw;
@@ -21,7 +22,7 @@ body{
     line-height: 2rem;
     z-index: 2;
     background-color: Black;
-    margin: 0 10px 0px 10px;
+    padding: 0 10px 0px 10px;
 }
 .navbar, .middle, .right{
     display: flex;
@@ -38,7 +39,6 @@ body{
 }
 .middle p:hover{
     background-color:  #f24c4c;
-    /* padding-bottom: -4px; */
     /* border-bottom: 4px solid #f24c4c; */
 }
 .right div{
@@ -53,22 +53,97 @@ body{
 }
 
 /* header css */
+@media screen and (max-width:580px){
+    
+    .image-container>img{
+        width: 100vw;
+    }
+    .aboutus{
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+    .aboutus p{
+        grid-column: 1/2;
+        border:3px solid rgb(192, 255, 253);
+        justify-content: center;
+        width: 100vw;
+        font-size: 16px;
+    }
+    .aboutus img{
+        grid-column: 1/2; 
+        /* border:4px solid rgb(241, 8, 47); */
+        width: 100vw;
+        /* margin-right: 0; */
+        align-self: center;
+       
+    }
+    .menu-container>p{
+        width: 40vw;       
+    }
+
+    .menu-items{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-area: "card" ;       
+        grid-template-rows: auto;
+    }
+    .item-detail{
+        /* border:1px solid red; */
+        width: 270px;
+    }
+    .card >img{
+        align-self: center;
+    }
+   
+    .card{        
+        display: flex; 
+        align-items: center;
+        flex-flow: column nowrap;
+        /* border:1px solid green; */
+        padding: 10px;
+        margin: 10px;
+    }
+    .card div>p{
+      line-height: 20px;
+    }
+    .contents{
+        display: flex;
+        align-items: center;
+        flex-flow: column nowrap;
+        /* width: 80vw; */
+        border: 1px solid red;
+        margin: 1.5rem 0;
+    }
+    .find-desc{
+        width: 100vw;
+        text-align: start;
+        font-size: 14px;
+        /* border: 1px solid rgb(43, 255, 0); */
+    }
+    .map-container{
+        width: 100vw;
+    }
+
+    .map-container>img{
+        width: 450px;
+    }
+}
 .image-container{
     background-image:url('images/pizza1 1.png');
     background-size: cover;
     display: flex;
     width: 100%;
-    height: 85vh;
-    object-fit: none;  
+    height: calc(100vw*.60);
     object-position: center top; 
     object-fit: contain; 
     position: relative;
+    margin-bottom: 2rem;
 }
 .image-container >img{
     position: absolute;
     top:-10px;
     width: 100%;
-    height: 90vh;    
+    height: calc(110vw*.60);    
 }
 .image-container >h1{
     position:absolute;
@@ -76,13 +151,12 @@ body{
     font-family: 'quattrocento';
     width: 48%;
     padding: 2rem;
-    /* border-bottom:4px solid rgb(238, 79, 79); */
-     text-align: center;
+    text-align: center;
    /* border:1px solid white; */   
 }
 .image-container>p{
     position:absolute;
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 100;
     top:8rem;
     width: 32%;
@@ -92,40 +166,53 @@ body{
 }
 
 /* About us */
-.aboutus{
-    display: flex;
-    flex-flow:column nowrap;
-    justify-content: center;
-    align-items: center;
-    /* border:1px solid red; */
-    margin-bottom: 3rem;
-    text-align: center;
-}
-.description{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-flow:row nowrap;
-    width: 80vw;
-    /* border:1px solid rgb(78, 159, 207); */
-}    
+    .aboutus{  
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        /* border:1px solid red; */
+       justify-content: center;
+        margin-bottom: 3rem;
+       text-align: center;
+       margin-top:  10vw;
+       
+    }
+    .aboutus p{
+        /* border:2px solid yellow; */
+        text-align: left;
+        border-top:2px solid #f24c4c;
+        margin-top: 18%;
+        margin-left: 10vw;
+        margin-right: 10px;
+        box-sizing: border-box;
+    }
    
-.aboutus h1{   
+.aboutus div{   
     line-height: 4rem;
     font-family: 'quattrocento';
-    width: 30%;
-    height: 4rem;
+    /* width: 80vw; */
+    height: 4rem;    
+    grid-column: 1/3;
+    margin-bottom: 3rem;
+    margin: auto;
+    /* border:1px solid rgb(26, 255, 0); */
+    align-self: stretch;
+}
+.aboutus div>h1{
+    /* width: 30%; */
     border-bottom:4px solid #b62828;
+    margin: auto;
+    margin-bottom: 10px;
+    /* font-size: 2.5rem; */
 }
-.description >p{
-    width: 35vw;
-    margin-top: 3rem;
-    text-align: left;
-    border-top:2px solid #f24c4c;
-}
-.description img{
-    width: 35vw;
-       /* border:2px solid yellow; */
+
+
+.aboutus img{
+    /* width: 40vw; */
+    width: 100%;
+    margin-top: 18%;
+    padding-right: 10vw;
+    padding-left: 10px;
+    box-sizing: border-box;
 }
 
 /* Menu */
@@ -133,8 +220,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow:column nowrap;
+    flex-flow:row  wrap;
     margin-bottom: 2rem;
+    /* border:1px solid white; */
 }
 .menu-container>h1{
     line-height: 4rem;
@@ -149,13 +237,13 @@ body{
     width: 80vw;
     /* border:1px solid yellow; */
     margin-bottom: 3rem;
+   
 }
 .menu-items{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: space-between;
-    width: 80vw;
-    /* border:1px solid rgb(78, 159, 207); */
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+     /* border:1px solid rgb(78, 159, 207); */
 }
 .card{
     display: flex;
@@ -165,9 +253,10 @@ body{
     margin-bottom: 1rem;    
 }
 .item-detail{
-    width: 200px;
+    width: 220px;
+    padding: 5px;
     /* border:1px solid rgb(175, 207, 78); */
-    /* width: 17.5vw; */
+   
 }
 .card h1{
     color:#F2C94C;
@@ -178,7 +267,7 @@ body{
 .card p{
 
     font-size:16px;
-    line-height: 1rem;
+    line-height: 25px;
     /* border:1px solid rgb(78, 159, 207); */    
 }
 
@@ -208,19 +297,21 @@ body{
     margin: 1.5rem 0;
 }
 .find-desc{
-    width: 40vw;
+    width: 80vw;
     text-align: start;
     /* border: 1px solid rgb(43, 255, 0); */
 }
 .find-desc >p{
     padding-bottom: 1.5rem;
+    /* font-size: 16px; */
 }
 .map-container{
-    width: 40vw;
+    width: 98%;
+    /* width: 40vw; */
     /* border: 1px solid rgb(200, 255, 0); */
 }
-.map-container img{
-    width: 38vw;
+.map-container img{  
+    width: 98%;  
 }
 
 /* footer */
@@ -231,6 +322,7 @@ body{
     width: 80vw;
     /* border:1px solid red; */
     margin: 5rem;
+    box-sizing: border-box;
 }
 .waiter{
     position: relative;
@@ -264,14 +356,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: left;
+    margin-bottom: 20px;
     /* border:1px solid red; */
 }
 .email span{
     font-size: 2rem;
-    /* padding-top: 40px;; */
-    /* border:1px solid red; */
     padding-right: 1rem;
-    /* margin-right: 10px; */
+   
 }
 .email p{
     /* border:1px solid red; */
@@ -279,11 +370,11 @@ body{
    
 }
 
-
 .contact{
     width: 12rem;
     display: flex;
     justify-content: left;
+    align-items: center;
     flex-flow: row nowrap;
     /* border:1px solid red; */
 }
